--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -58,7 +58,8 @@ NETWORK_CONF_SOURCES =						\
 
 # Storage driver generic impl APIs
 STORAGE_CONF_SOURCES =						\
-		storage_conf.h storage_conf.c
+		storage_conf.h storage_conf.c			\
+		storage_backend.h storage_backend.c
 
 
 # The remote RPC driver, covering domains, storage, networks, etc
@@ -109,8 +110,7 @@ QEMU_DRIVER_SOURCES =						\
 
 # And finally storage backend specific impls
 STORAGE_DRIVER_SOURCES =					\
-		storage_driver.h storage_driver.c		\
-		storage_backend.h storage_backend.c
+		storage_driver.h storage_driver.c
 
 STORAGE_DRIVER_FS_SOURCES =					\
 		storage_backend_fs.h storage_backend_fs.c
