* configure.in libvirt.spec.in NEWS docs/*: release of libvirt-0.4.6 * src/storage_backend_logical.c: re-add the -f flag to vgremove * po/*: rebuilt Daniel

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -387,6 +387,9 @@ fi
 %endif
 
 %changelog
+* Tue Sep 23 2008 Daniel Veillard <veillard@redhat.com> - 0.4.6-1
+- release of 0.4.6
+
 * Mon Sep  8 2008 Daniel Veillard <veillard@redhat.com> - 0.4.5-1
 - release of 0.4.5
 
