Xen interface order and fix python parallel build * src/xend_internal.c: fix ordering when parsing multiple Xen   interfaces, patch by Jim Fehlig * python/Makefile.am: fix parallel build Daniel

--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -50,7 +50,7 @@ GENERATED= libvirt-export.c \
 $(GENERATED): $(srcdir)/$(GENERATE) $(API_DESC)
 	$(PYTHON) $(srcdir)/$(GENERATE) $(srcdir)
 
-libvirt.py: $(srcdir)/libvir.py libvirtclass.py
+libvirt.py: $(srcdir)/libvir.py $(GENERATED)
 	cat $(srcdir)/libvir.py libvirtclass.py > $@-t
 	mv $@-t $@
 
