Updated MinGW spec file. 	* .cvsignore, Makefile.am, autobuild.sh, configure.in, 	  mingw32-libvirt.spec.in: Import the latest MinGW libvirt spec 	  file.  Note that the file has been renamed to conform to 	  new Fedora packaging guidelines. 	* autobuild.sh: Fix a bug in the generation of the $EXTRA_RELEASE 	  field when autobuilding.

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,7 +10,7 @@ ACLOCAL_AMFLAGS = -I m4 -I gnulib/m4
 
 EXTRA_DIST = \
   libvirt.spec libvirt.spec.in \
-  mingw-libvirt.spec.in \
+  mingw32-libvirt.spec.in \
   libvirt.pc libvirt.pc.in \
   $(man_MANS) autobuild.sh \
   .x-sc_avoid_if_before_free \
