"make syntax-check" was complaining that network_driver.c was missing from POTFILES.in.  Add it there, and then fix up one warning about included c-ctypes.h that wasn't being used.
Signed-off-by: Chris Lalancette <clalance@redhat.com>

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,6 +11,7 @@ src/lxc_container.c
 src/lxc_controller.c
 src/lxc_driver.c
 src/network_conf.c
+src/network_driver.c
 src/openvz_conf.c
 src/openvz_driver.c
 src/proxy_internal.c
