Fix syntax error that was breaking RPM builds.

--- a/configure.in
+++ b/configure.in
@@ -1011,7 +1011,7 @@ AM_CONDITIONAL([WITH_LIBVIRTD],[test "x$with_libvirtd" = "xyes"])
 dnl Check for gettext
 AM_GNU_GETTEXT_VERSION([0.14.1])
 AM_GNU_GETTEXT([external])
-ALL_LINGUAS=`{cd "$srcdir/po" > /dev/null && ls *.po} | sed 's+\.po$++'`
+ALL_LINGUAS=`cd "$srcdir/po" > /dev/null && ls *.po | sed 's+\.po$++'`
 
 dnl Extra link-time flags for Cygwin.
 dnl Copied from libxml2 configure.in, but I removed mingw changes
