--- a/docs/apps.html.in
+++ b/docs/apps.html.in
@@ -105,10 +105,11 @@
 
     <h2>Monitoring plugins</h2>
     <dl>
-      <dt><a href="http://honk.sigxcpu.org/projects/libvirt/monitor/">for munin</a></dt>
+      <dt><a href="http://honk.sigxcpu.org/projects/libvirt/#munin">for munin</a></dt>
       <dd>
-	The two plugins provided by Guido Günther allows to monitor network and
-        block I/O with <a href="http://munin.projects.linpro.no/">Munin</a>.
+	The plugins provided by Guido Günther allows to monitor various things
+        like network and block I/O with
+        <a href="http://munin.projects.linpro.no/">Munin</a>.
       </dd>
       <dt><a href="http://collectd.org/plugins/libvirt.shtml">for collectd</a></dt>
       <dd>
