remove src/socketcompat.h;  no longer needed
* src/socketcompat.h: Remove file.
* src/remote_internal.c: Don't include socketcompat.h.
* qemud/qemud.h: Likewise.
* qemud/remote_protocol.x: Likewise, but do include <arpa/inet.h>
for htonl.
* src/remote_internal.c: Likewise, but do include <errno.h>.
* qemud/remote_protocol.c: Regenererate.
* qemud/remote_protocol.h: Regenererate.
* src/Makefile.am (REMOTE_DRIVER_SOURCES): Remove socketcompat.h.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -74,8 +74,7 @@ REMOTE_DRIVER_SOURCES =						\
 		gnutls_1_0_compat.h				\
 		remote_internal.c remote_internal.h		\
 		../qemud/remote_protocol.c			\
-		../qemud/remote_protocol.h			\
-		socketcompat.h
+		../qemud/remote_protocol.h
 
 # Mock driver, covering domains, storage, networks, etc
 TEST_DRIVER_SOURCES =						\
